REGRESSION: WebInspector docking busted on Windows <rdar://problem/7728433> and https://bugs.webkit.org/show_bug.cgi?id=35953

Reviewed by Tim Hatcher.

WebCore:

First off, a bit of settings-key related cleanup. If they're shared over multiple files, these
things should be properly declared Strings, not random loose char*'s.

Along with that change, we move the "inspectorStartsAttachedSettingName" from WebKit down to the
InspectorController in WebCore.

Finally, when the controller is ready to show the WebInspector window, it can use this newly
exposed settings key to call "setWindowVisible" directly instead of relying on "showWindow" to do
it indirectly.

* WebCore.base.exp:

* inspector/InspectorBackend.cpp:
(WebCore::InspectorBackend::saveFrontendSettings):
* inspector/InspectorController.cpp:
(WebCore::InspectorController::frontendSettingsSettingName):
(WebCore::InspectorController::inspectorStartsAttachedSettingName):
(WebCore::InspectorController::scriptObjectReady): Using the new inspectorStartsAttachedSettingName
  key and some "can I attach this?" logic, call setWindowVisible directly to display the inspector
  window.
(WebCore::InspectorController::populateScriptObjects):
* inspector/InspectorController.h:

WebKit/mac:

* WebCoreSupport/WebInspectorClient.mm:
(-[WebInspectorWindowController showWindow:]): Use the InspectorController:: copy of the should attach settings key.
(-[WebInspectorWindowController attach]): Ditto.
(-[WebInspectorWindowController detach]): Ditto.

WebKit/win:

* WebCoreSupport/WebInspectorClient.cpp:
(WebInspectorClient::attachWindow): Use the InspectorController:: copy of the should attach settings key.
(WebInspectorClient::detachWindow): Ditto.
(WebInspectorClient::showWindowWithoutNotifications): Ditto.



Canonical link: https://commits.webkit.org/47056@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55761 268f45cc-cd09-0410-ab3c-d52691b4dbfc